# real-time-crypto-price-prediction

./: README.md
services/trade_producer/: pyproject.toml
services/trade_producer/src/: main.py
