[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["midhilesh <chintu.midhilesh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hopsworks = "^3.7.0"
quixstreams = "^2.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
